added some materialize css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>BogAppThree</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+            <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+                <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+</head>
 
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col m6 offset-m3">
-        <%= yield %>
-      </div>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo center">Bog App</a>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col m6 offset-m3">
+                <%= yield %>
+            </div>
+        </div>
     </div>
-  </div>
 </body>
+
 </html>
