--- a/app/assets/stylesheets/creatures.scss
+++ b/app/assets/stylesheets/creatures.scss
@@ -2,3 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "materialize";
+.card-panel {
+    float: left;
+    width: 300px;
+}
+
+.container {
+    margin: 5em;
+}
