--- a/app/views/creatures/index.html.erb
+++ b/app/views/creatures/index.html.erb
@@ -1,8 +1,14 @@
 <% @creatures.each do |creature| %>
-  <p>
-    <strong>Name:</strong>
-    <%= creature.name %><br>
-    <strong>Description:</strong>
-    <%= creature.description %>
-  </p>
-<% end %>
+    <div class="row">
+        <div class="col s12 m5">
+            <div class="card-panel teal">
+                <p>
+                    <strong>Name:</strong>
+                    <%= creature.name %><br>
+                        <strong>Description:</strong>
+                        <%= creature.description %>
+                </p>
+            </div>
+        </div>
+    </div>
+    <% end %>
