--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo center">Bog App</a>
+            <a href="/" class="brand-logo center">Bog App</a>
         </div>
     </nav>
 
