--- a/app/views/creatures/index.html.erb
+++ b/app/views/creatures/index.html.erb
@@ -1,14 +1,8 @@
 <% @creatures.each do |creature| %>
-    <div class="row">
-        <div class="col s12 m5">
-            <div class="card-panel teal">
-                <p>
-                    <strong>Name:</strong>
-                    <%= creature.name %><br>
-                        <strong>Description:</strong>
-                        <%= creature.description %>
-                </p>
-            </div>
-        </div>
-    </div>
+    <p class="cards">
+        <strong>Name:</strong>
+        <%= creature.name %><br>
+            <strong>Description:</strong>
+            <%= creature.description %>
+    </p>
     <% end %>
