--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,19 +8,20 @@
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
             <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
                 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+                <link href="https://fonts.googleapis.com/css?family=Rationale" rel="stylesheet">
 
 </head>
 
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="/" class="brand-logo center">Bog App</a>
+            <a href="/" class="brand-logo">Bog App</a>
         </div>
     </nav>
 
     <div class="container">
         <div class="row">
-            <div class="col m6 offset-m3">
+            <div>
                 <%= yield %>
             </div>
         </div>
