--- a/app/assets/stylesheets/creatures.scss
+++ b/app/assets/stylesheets/creatures.scss
@@ -18,7 +18,7 @@
 }
 
 .nav-wrapper {
-    background-color: rgb(78.5%, 63.3%, 97.2%);
+    background-color: rgb(63.9%, 62.2%, 97.2%);
 }
 
 .cards {
@@ -38,4 +38,8 @@
 
 .field-name {
     font-weight: bold;
+}
+
+.add-link {
+    text-align: right;
 }
