--- a/app/views/creatures/index.html.erb
+++ b/app/views/creatures/index.html.erb
@@ -1,3 +1,5 @@
+<div class="add-link">Add New Creature</div>
+
 <% @creatures.each do |creature| %>
     <p class="cards">
         <strong>Name:</strong>
