--- a/app/views/creatures/show.html.erb
+++ b/app/views/creatures/show.html.erb
@@ -1,3 +1,5 @@
-<h3 class="show-name"><%= @creature.name %></h3>
+<h3 class="show-name">
+<%= @creature.name %></h3>
 <p class="field-name">Desription:</p>
 <p class="cards"> <%=  @creature.description %></p>
+<%= button_to "Delete", @creature, method: :delete %>
