almost finished with css

--- a/app/assets/stylesheets/creatures.scss
+++ b/app/assets/stylesheets/creatures.scss
@@ -2,44 +2,98 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "materialize";
+$h3: rgb(94.1%, 90.2%, 54.9%);
+$title-color: rgb(91.7%, 91.7%, 84.8%);
+$h1: rgb(100%, 100%, 94.1%);
+body {
+    background-image: url("download.jpeg");
+    height: calc(100vh - 64px);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+}
+
+.header {
+    width: 50%;
+    margin: 40px;
+    margin-left: 3em;
+    margin-right: 0;
+    h1,
+    a {
+        display: inline;
+    }
+    h1 {
+        color: $h1;
+    }
+    a {
+        color: rgb(100%, 37%, 37%);
+    }
+}
+
 .container {
+    padding-top: 0 !important;
     padding: 5em;
     overflow: hidden;
-    margin: 0;
-    width: 100%;
+    float: right;
+    width: 50%;
 }
 
 .brand-logo {
     margin-left: 30px;
 }
 
-.row {
-    width: 100%;
-}
-
 .nav-wrapper {
-    background-color: rgb(63.9%, 62.2%, 97.2%);
+    background-color: rgb(18.4%, 31%, 31%);
 }
 
-.cards {
-    background: rgb(96.4%, 96.4%, 96.4%);
-    margin: 0;
+.card {
+    background: rgba(96.4%, 96.4%, 96.4%, .75);
+    margin: 10px;
+    border-radius: 10px;
     padding: 30px;
 }
 
-.cards:nth-child(even) {
-    background: rgb(91.1%, 94.8%, 95.2%);
+.card:nth-child(even) {
+    background: rgba(91.1%, 94.8%, 95.2%, .75);
 }
 
-.show-name {
+.creature-name {
     text-align: center;
     font-family: 'Rationale', sans-serif;
+    color: $h3;
 }
 
-.field-name {
-    font-weight: bold;
+.content-title {
+    color: $title-color;
 }
 
-.add-link {
-    text-align: right;
+.btn {
+    float: right;
+    margin: 10px;
+}
+
+.delete {
+    background: red;
+}
+
+.new,
+.edit {
+    form {
+        background: rgba(96.4%, 96.4%, 96.4%, .75);
+        margin: 10px;
+        border-radius: 10px;
+        padding: 30px;
+        textarea {
+            background: white;
+        }
+    }
+}
+
+.index {
+    overflow: scroll;
+    width: 100%;
+    height: 415px;
+    a {
+        float: right;
+    }
 }
