--- a/app/views/creatures/edit.html.erb
+++ b/app/views/creatures/edit.html.erb
@@ -1,5 +1,8 @@
-<%= form_for @creature do |f| %>
-  <%= f.text_field :name %>
-  <%= f.text_area :description %>
-  <%= f.submit "Save Creature" %>
-<% end %>
+<div class="edit">
+  <h3 class="creature-name">Edit This Creature</h3>
+  <%= form_for @creature do |f| %>
+      <strong>Name: </strong><%= f.text_field :name %>
+      <strong>Description: </strong><%= f.text_area :description %>
+      <%= f.submit "Save Creature" %>
+  <% end %>
+</div>
