--- a/app/views/creatures/index.html.erb
+++ b/app/views/creatures/index.html.erb
@@ -1,10 +1,10 @@
-<div class="add-link">Add New Creature</div>
-
-<% @creatures.each do |creature| %>
-    <p class="cards">
-        <strong>Name:</strong>
-        <%= creature.name %><br>
-            <strong>Description:</strong>
-            <%= creature.description %>
-    </p>
+<h3 class="creature-name">Creatures</h3>
+<div class="index">
+    <% @creatures.each do |creature| %>
+        <p class="card">
+            <strong>Name: </strong><%= creature.name %><br>
+            <strong>Description: </strong><%= creature.description %><br>
+            <%= link_to 'View Creature', creature_path(creature) %>
+        </p>
     <% end %>
+</div>
