--- a/app/views/creatures/new.html.erb
+++ b/app/views/creatures/new.html.erb
@@ -1,5 +1,8 @@
-<%= form_for :creature, url: "/creatures", method: "post" do |f| %>
-  Name: <%= f.text_field :name %>
-  Description: <%= f.text_area :description %>
-  <%= f.submit "Save Creature" %>
-<% end %>
+<div class="new">
+  <h3 class="creature-name">Create A Creature</h3>
+  <%= form_for @creature do |f| %>
+      <strong>Name: </strong><%= f.text_field :name %>
+      <strong>Description: </strong> <%= f.text_area :description %>
+      <%= f.submit "Save Creature " %>
+  <% end %>
+</div>
