--- a/app/views/creatures/show.html.erb
+++ b/app/views/creatures/show.html.erb
@@ -1,5 +1,6 @@
-<h3 class="show-name">
+<h3 class="creature-name">
 <%= @creature.name %></h3>
-<p class="field-name">Desription:</p>
-<p class="cards"> <%=  @creature.description %></p>
-<%= button_to "Delete", @creature, method: :delete %>
+<p class="content-title">Desription:</p>
+<p class="card"> <%=  @creature.description %></p>
+<%= button_to "Delete", @creature, method: :delete, :class => "waves-effect waves-light btn delete" %>
+<%= button_to "Edit", edit_creature_path(@creature), method: :get, :class => "waves-effect waves-light btn" %>
