--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,15 @@
 </head>
 
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="/" class="brand-logo">Bog App</a>
-        </div>
-    </nav>
+    <div class="header">
+        <a href="/">
+            <h1>Bog App </h1>
+        </a>
+        <span class="add-link">
+            <%= link_to ' + New Creature', new_creature_path, :class => "add-link"%>
+        </span>
+    </div>
+
 
     <div class="container">
         <div class="row">
